# Rust-C-Wasm

./: .gitignore  Cargo.toml  LICENSE  README.MD  flake.nix
bindings/: Cargo.toml  build.rs
bindings/C/: main.c
bindings/src/: lib.rs
src/: main.rs
